<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="30dip">
<TableLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:padding="30dip">
	<TableRow
		android:layout_gravity="center">
		<Button
			android:id="@+id/genre_btn0"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/genre_ttl0"/>
		<Button
			android:id="@+id/genre_btn1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/genre_ttl1"/>
		<Button
			android:id="@+id/genre_btn2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/genre_ttl2"/>
	
	
	</TableRow>
</TableLayout>
	
</LinearLayout>
