<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="30dip" >
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_gravity="center" 
    android:text="@string/bangumi_ttl"
    android:paddingBottom="20dip"
    android:textSize="30sp"
    android:textColor="@color/main_ttl"
    />
<Button
	android:id="@+id/btn0"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/btn0_ttl" />
<!--<Button
	android:id="@+id/btn1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/btn1_ttl" />-->
<Button
	android:id="@+id/btn2"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/btn2_ttl" />
	
</LinearLayout>
